<resources>
    <string name="app_name">My App2</string>
    <string name="action_settings">Settings</string>
    <string name="item_list_fragment_label">Item List</string>
    <string name="item_edit_fragment_label">Item Edit</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_author">Enter author</string>
    <string name="set_publish_date">Set publish date</string>
    <string name="change_date">Change Date</string>
    <string name="is_it_booked">Is it booked?</string>
</resources>